--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 
   <div id="letter">
     <h1>💖 Para mi querida mamá 💖</h1>
-    <p>Querida mamá, te amo con todo mi corazón. Gracias por estar siempre ahí para mí.</p>
+    <p>Gracias mama por acompañarme desde niño en mis juegos por aguantar mi caracter por desvelarte cuando estaba enfermo y estar en los dias malos
+        y por hacer los dias buenos por hacer mis comidas favoritas en cada cumpleaños por ser la mas ordenada y prudente de la familia y al mismo tiempo
+        la que resuelve cualquier problema y la encuentra cualquier cosa que se pierde en el hogar decir que solo eres mi mama se queda corto por un millon de 
+        dia mas junto a ti, TE AMO MAMA .</p>
     <p style="font-style: italic;">Con amor, [Tu Nombre]</p>
   </div>
 
