--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <body>
 
   <div id="envelope">📩 Haz clic para abrir la carta</div>
+   <!-- Imagen local, asegúrate que mama.jpg está en la misma carpeta -->
+    <img src="foto-mama.jpg" alt="Foto de mamá">
 
   <div id="letter">
     <h1>💖 Para mi querida mamá 💖</h1>
@@ -51,7 +53,7 @@
         y por hacer los dias buenos por hacer mis comidas favoritas en cada cumpleaños por ser la mas ordenada y prudente de la familia y al mismo tiempo
         la que resuelve cualquier problema y la encuentra cualquier cosa que se pierde en el hogar decir que solo eres mi mama se queda corto por un millon de 
         dia mas junto a ti, TE AMO MAMA .</p>
-    <p style="font-style: italic;">Con amor, [Tu Nombre]</p>
+    <p style="font-style: italic;">Con amor, [TU NIÑO]</p>
   </div>
 
   <script>
